Electrical power expand

--- a/physics/electrical-engineering/power.html
+++ b/physics/electrical-engineering/power.html
@@ -15,5 +15,16 @@ layout: electrical-engineering
 
 <section>
     <h2>Using the Electrical Power Equation</h2>
-    <p>The electrical power equation is quite useful because the electrical power output of something or the electrical power used by something remains the same when we change the voltage or current. This is why power stations use really high voltage. </p>
+    <p>The electrical power equation is quite useful because the electrical power output of something or the electrical power used by something remains the same when we change the voltage or current.</p>
+    <p>Electricity transmission, in fact, uses high voltage because of electrical power. First of all, let's remind ourselves of the equation for power:</p>
+    <blockquote>P = IV</blockquote>
+    <p>Here, we can use <a href="/physics/electrical-engineering/ohms-law/">Ohm's Law</a>:</p>
+    <blockquote>V = IR</blockquote>
+    <p>We can substitute the voltage in the power equation for Ohm's law, so now we have:</p>
+    <blockquote>P = I<sup>2</sup>R</blockquote>
+    <p>We can then substiute in the current using Ohm's law:</p>
+    <blockquote>P = (V / R)<sup>2</sup> x R</blockquote>
+    <p>Simplifying, we get:</p>
+    <blockquote>P = V<sup>2</sup> / R</blockquote>
+    <p>Power is constant because the power plant can only generate so much power. So, if we increase voltage, the resistance <strong>must</strong> go down. So, the power plants will increase the voltage a lot, so that the resistance will be lower and less electricity is wasted.</p>
 </section>
