--- a/physics/electrical-engineering/power.html
+++ b/physics/electrical-engineering/power.html
@@ -22,7 +22,7 @@ layout: electrical-engineering
     <blockquote>V = IR</blockquote>
     <p>We can substitute the voltage in the power equation for Ohm's law, so now we have:</p>
     <blockquote>P = I<sup>2</sup>R</blockquote>
-    <p>We can then substiute in the current using Ohm's law:</p>
+    <p>We can then substitute in the current using Ohm's law:</p>
     <blockquote>P = (V / R)<sup>2</sup> x R</blockquote>
     <p>Simplifying, we get:</p>
     <blockquote>P = V<sup>2</sup> / R</blockquote>
