--- a/programming/python/for-loops.html
+++ b/programming/python/for-loops.html
@@ -11,7 +11,7 @@ permalink: /programming/python/for-loops/
     <p>A for loop is used to <em>iterate</em> through an <em>iterable</em>. An iterable is something you can go one by one through, which can be a list, a tuple, a string, or a set. To iterate through an iterable means to go one by one through it. Then, inside of our for loop, we can do something whenever we iterate through one element in the iterable.</p>
     <p>Below is the general form of a for loop: </p>
     <pre><code class="language-python">
-for <i>element</i> in <i>iterable</i>:
+for [element] in [iterable]:
     # do something
     </code></pre>
 </section>
