python comments edit

--- a/programming/python/comments.html
+++ b/programming/python/comments.html
@@ -13,10 +13,15 @@ permalink: /programming/python/comments/
 
 <section>
     <h2>Single-Line Comments</h2>
-    <p>To do single-line comments in Python, we simply put a number sign (<code>#</code>) in front of it. For example, if we run <code>#print("Hello World!")</code>, Python won't do anything.</p>
+    <p>To do single-line comments in Python, we simply put a number sign (<code>#</code>) in front of it. For example, run:</p>
+    <pre><code class="language-python">#print("Hello World")</code></pre>
+    <p>Nothing is outputted.</p>
 </section>
 
 <section>
     <h2>Multiline Comments</h2>
-    <p>To make a multiline comment (one spanning multiple lines), wrap the entire thing you want to comment out in three quotes (<code>"""</code> or <code>'''</code>). If we do <code>'''print("Hello World!")'''</code>, Python again won't do anything.</p>
+    <p>To make a multiline comment (one spanning multiple lines), wrap the entire thing you want to comment out in three quotes (<code>"""</code> or <code>'''</code>). For example, run:</p>
+    <pre><code class="language-python">'''print("Hello")
+print("World")'''</code></pre>
+    <p>Again nothing is outputted.</p>
 </section>
