--- a/programming/python/for-loops.html
+++ b/programming/python/for-loops.html
@@ -28,4 +28,5 @@ for [element] in [iterable]:
     <pre><code class="language-python">
 print(list(range(5))) # output is [1, 2, 3, 4]
     </code></pre>
+    <small>Learn more about this in our <a href="/programming/python/casting/">Casting</a> tutorial!</small><br>
 </section>
