python functions edit

--- a/programming/python/functions.html
+++ b/programming/python/functions.html
@@ -109,5 +109,5 @@ emptyFunction<span style='color:#808030; '>(</span><span style='color:#808030; '
 <section>
     <h2>Running a Function</h2>
     <p>Running a function quite similar to making a function, but we don't use <code>def</code> and we don't type anything after the parentheses. For example, we could call the <code>helloWorld</code> fucntion we made earlier by typing <code>helloWorld()</code>.</p>
-    <p><i class="fas fa-exclamation-circle"></i> Remember that if you need to pass in any arguments to put them inside the brackets!!</p>
+    <p><i class="fas fa-exclamation-circle"></i> Remember that if you need to pass in any arguments to put them inside the brackets! Also remember you need brackets even if there are no paramaters that you are passing in!</p>
 </section>
