--- a/programming/java/first-program.html
+++ b/programming/java/first-program.html
@@ -15,9 +15,15 @@ public class HelloWorld {
     }
 }
     </code></pre>
+    <p>Save the code in a file called <code>HelloWorld.java</code>.</p>
 </section>
 
 <section>
     <h2>Running the Code</h2>
-    <p></p>
+    <p>First of all, you open the command line and navigate to the folder where you stored the code file.</p>
+    <p>Then, run the following command in the command line, which compiles the Java code into bytecode:</p>
+    <pre><code class="language-batch">javac HelloWorld.java</code></pre>
+    <p>After you run the command, you should see a new file called <code>HelloWorld.class</code>, which stores the bytecode.</p>
+    <p>Then, run the following command, which interprets the bytecode:</p>
+    <pre><code class="language-batch">java HelloWorld</code></pre>
 </section>
