Java uses section

--- a/programming/java/first-program.html
+++ b/programming/java/first-program.html
@@ -26,4 +26,11 @@ public class HelloWorld {
     <p>After you run the command, you should see a new file called <code>HelloWorld.class</code>, which stores the bytecode.</p>
     <p>Then, run the following command, which interprets the bytecode:</p>
     <pre><code class="language-batch">java HelloWorld</code></pre>
+    <p>Once you run the code, you should see:</p>
+    <samp>Hello World!</samp>
+</section>
+
+<section>
+    <h2>Code Breakdown</h2>
+    <p></p>
 </section>
