--- a/programming/java/index.html
+++ b/programming/java/index.html
@@ -8,13 +8,23 @@ permalink: /programming/java/
 
 <section>
     <h2>What is Java?</h2>
-    <p>Java is an object-oriented programming language, which means that Java is based on the concept of a class. Java code is first compiled into bytecode, which ends in a ".class". You can then run your bytecode on any computer with the Java Virtual Machine. Java is one of the world's most popular programming languages. </p>
+    <p>Java is an object-oriented programming language, which means that Java is based on the concept of a class. Java code is first compiled into bytecode, which ends in a ".class". You can then run your bytecode on any computer with the Java Virtual Machine. Java is one of the world's most popular programming languages.</p>
     <img src="/images/programming/java/java-logo.png" alt="Java Logo">
 </section>
 
 <section>
     <h2>Why Learn Java?</h2>
     <p>Java is one of the most popular and in-demand programming languages. Java is also versatile and can do may things.</p>
+</section>
+
+<section>
+    <h2>Uses</h2>
+    <p>Below are some uses of Java:</p>
+    <ul>
+        <li>Web Applications</li>
+        <li>Enterprise Applications</li>
+        <li>Mobile Applications</li>
+    </ul>
 </section>
 
 <section>
