Code Breakdown section

--- a/programming/java/first-program.html
+++ b/programming/java/first-program.html
@@ -32,5 +32,14 @@ public class HelloWorld {
 
 <section>
     <h2>Code Breakdown</h2>
-    <p></p>
+    <p>All Java programs have a class definition. The name of the class is the same as the name of the Java file. We will learn about classes in a later tutorial:</p>
+    <pre><code class="language-java">class HelloWorld {
+        ...
+    }</code></pre>
+    <p>Inside of the class, we have the <code>main</code> function, which we will learn more about in a later tutorial. Just know that when Java runs the file, the code inside the <code>main</code> function will be run:</p>
+    <pre><code class="language-java">public static void main(String[] args) {
+        ...
+    }</code></pre>
+    <p>Finally, inside of the <code>main</code> function, we output <code>Hello, World!</code>:</p>
+    <pre><code class="language-java">System.out.println("Hello, World!");</code></pre>
 </section>
