--- a/programming/python/data-structures-and-algorithms/sorting.html
+++ b/programming/python/data-structures-and-algorithms/sorting.html
@@ -14,7 +14,7 @@ permalink: /programming/python/data-structures-and-algorithms/sorting/
 
 <section>
     <h2>Why use Sorting?</h2>
-    <p></p>
+    <p>In many Algorithms, you require a sorted array of numbers. Sorting makes these Algorithms more efficient because they can be built to run on sorted arrays.</p>
 </section>
 
 <section>
