--- a/programming/python/data-structures-and-algorithms/sorting.html
+++ b/programming/python/data-structures-and-algorithms/sorting.html
@@ -19,5 +19,8 @@ permalink: /programming/python/data-structures-and-algorithms/sorting/
 
 <section>
     <h2>Different Sort Algorithms</h2>
-    <p></p>
+    <p>Here are the Sort Algorithms we'll go over in this tutorial series. However, do note that there <b>TONS!</b> of other Search Algorithms, but these are the most popular ones:</p>
+    <ul>
+        <li>Bubble Sort</li>
+    </ul>
 </section>
