--- a/programming/python/cool-projects/trivia-game.html
+++ b/programming/python/cool-projects/trivia-game.html
@@ -5,7 +5,7 @@ permalink: /programming/python/cool-projects/trivia-game/
 ---
 
 <h1>Python Trivia Game</h1>
-<p>In this tutorial, we'll create a simple <i>command line interface</i> (CLI) program that runs a quick game of trivia.</p>
+<p>In this tutorial, we'll create a simple <em>command line interface</em> (CLI) program that runs a quick game of trivia.</p>
 
 <section>
     <h2>Making Questions</h2>
@@ -64,7 +64,7 @@ except IndexError:
     break
     </code></pre>
     <p>Finally, we can run our code. Try a few different test cases and see if it works!</p>
-    <p>You can find the full code for the tutorial <a href="https://github.com/calgary34/python-trivia-app">here</a>.</p>
+    <p>You can find the full code for the tutorial <a href="https://github.com/learnmonkey/python-trivia-app">here</a>.</p>
 </section>
 
 <section>
