--- a/physics/electrical-engineering/circuit-diagrams.html
+++ b/physics/electrical-engineering/circuit-diagrams.html
@@ -13,4 +13,32 @@ layout: electrical-engineering
 <section>
     <h2>Electrical Components in Circuit Diagrams</h2>
     <p>In this section, we will learn how to represent some common electrical components in circuit diagrams.</p>
+    <figure>
+        <img src="/images/physics/electrical-engineering/circuit-diagram-resistor.png" alt="A resistor in a circuit diagram">
+        <figcaption>Wire in a circuit diagram</figcaption>
+    </figure>
+    <figure>
+        <img src="/images/physics/electrical-engineering/circuit-diagram-resistor.png" alt="A resistor in a circuit diagram">
+        <figcaption>A resistor in a circuit diagram</figcaption>
+    </figure>
+    <figure>
+        <img src="/images/physics/electrical-engineering/circuit-diagram-resistor.png" alt="A resistor in a circuit diagram">
+        <figcaption>A battery in a circuit diagram</figcaption>
+    </figure>
+    <figure>
+        <img src="/images/physics/electrical-engineering/circuit-diagram-resistor.png" alt="A resistor in a circuit diagram">
+        <figcaption>An LED in a circuit diagram</figcaption>
+    </figure>
+    <figure>
+        <img src="/images/physics/electrical-engineering/circuit-diagram-resistor.png" alt="A resistor in a circuit diagram">
+        <figcaption>A light bulb in a circuit diagram</figcaption>
+    </figure>
+    <figure>
+        <img src="/images/physics/electrical-engineering/circuit-diagram-resistor.png" alt="A resistor in a circuit diagram">
+        <figcaption>A diode in a circuit diagram</figcaption>
+    </figure>
+    <figure>
+        <img src="/images/physics/electrical-engineering/circuit-diagram-resistor.png" alt="A resistor in a circuit diagram">
+        <figcaption>A transistor in a circuit diagram</figcaption>
+    </figure>
 </section>
