--- a/physics/electrical-engineering/circuit-diagrams.html
+++ b/physics/electrical-engineering/circuit-diagrams.html
@@ -15,27 +15,23 @@ layout: electrical-engineering
     <p>In this section, we will learn how to represent some common electrical components in circuit diagrams.</p>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-wire.png" alt="A resistor in a circuit diagram">
-        <figcaption>Wire in a circuit diagram</figcaption>
+        <figcaption>Wire in a circuit diagram. Wires are represented as straight lines in a circuit diagram.</figcaption>
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-resistor.png" alt="A resistor in a circuit diagram">
-        <figcaption>A resistor in a circuit diagram</figcaption>
+        <figcaption>A resistor in a circuit diagram. Resistors are represented as squiggly lines with sharp corners.</figcaption>
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-battery.png" alt="A resistor in a circuit diagram">
-        <figcaption>A battery in a circuit diagram</figcaption>
-    </figure>
-    <figure>
-        <img src="/images/physics/electrical-engineering/circuit-diagram-led.png" alt="A resistor in a circuit diagram">
-        <figcaption>An LED in a circuit diagram</figcaption>
+        <figcaption>A battery in a circuit diagram. Batteries are represented as four lines with alternating lengths. The longest line on the end is the positive terminal, while the shortest line on the end is the negative terminal.</figcaption>
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-light-bulb.png" alt="A resistor in a circuit diagram">
-        <figcaption>A light bulb in a circuit diagram</figcaption>
+        <figcaption>A light bulb in a circuit diagram. Light bulbs are represented as circles with perpendicular lines inside.</figcaption>
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-diode.png" alt="A resistor in a circuit diagram">
-        <figcaption>A diode in a circuit diagram</figcaption>
+        <figcaption>A diode in a circuit diagram. Diodes are represented as a triangle with a line.</figcaption>
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-transistor.png" alt="A resistor in a circuit diagram">
