--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -12,6 +12,13 @@ permalink: /programming/python/data-structures-and-algorithms/queues/
     <h2>What are Queues?</h2>
     <p>Queues are a simple but useful Data Structure. They're used in Programming Competitions and Job Interviews, so it is a good idea to learn about them.</p>
     <p>In Programming, Queues are similar to line-ups of people in real life. For example, let's say that some people are lining up to go on a rollar coaster:</p>
+    <div class="Row">
+        <div class="Column"></div>
+        <div class="Column"></div>
+        <div class="Column"></div>
+        <div class="Column"></div>
+        <div class="Column"></div>
+    </div>
     <div style="height: 75px; width: 75px; border-radius: 50%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center; margin-bottom: 10px;">3</div>
     <div style="height: 75px; width: 75px; border-radius: 50%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center; margin-bottom: 10px;">42</div>
     <div style="height: 75px; width: 75px; border-radius: 50%; border: 2px solid black; text-align: center; display: flex; flex-direction: column; justify-content: center; margin-bottom: 10px;">-29</div>
