--- a/physics/electrical-engineering/capacitors.html
+++ b/physics/electrical-engineering/capacitors.html
@@ -8,6 +8,10 @@ layout: electrical-engineering
 <section>
     <h2>What are Capacitors?</h2>
     <p>Capacitors store electricity, just like batteries. The difference is that capacitors charge and release electricity much faster. This is because capacitors store electricity using electric fields, while batteries use chemistry.</p>
+</section>
+
+<section>
+    <h2>Capacitance</h2>
     <p>The effect of a capacitor is called <em>capacitance</em>. We measure capacitance in <em>farads</em>.</p>
 </section>
 
