--- a/physics/electrical-engineering/resistance.html
+++ b/physics/electrical-engineering/resistance.html
@@ -5,8 +5,19 @@ layout: electrical-engineering
 ---
 <h1>Resistance</h1>
 
-<p><em>Resistance</em> is a measure of how much something blocks electricity. You can think of resistance as friction for electricity.</p>
-<p>Since we don't live in a perfect world, everything has resistance. Even the wires have resistance, albeit very low resistance.</p>
-<p>We can add resistance on purpose with <em>resistors</em>. Resistors are can be used for limiting the amount of current when dealing with sensitive electrical components, such as LEDs.</p>
-<small>Fun fact: resistors have colored bars on them which depend on the resistance.</small>
-<p>The reciprocal of resistance is called <em>conductance</em> and is measured in the unit of <em>siemens</em>. However, resistance is used more than conductance.</p>
+<section>
+    <h2>What is Resistance?</h2>
+    <p><em>Resistance</em> is a measure of how much something blocks electricity. You can think of resistance as friction for electricity.</p>
+    <p>Since we don't live in a perfect world, everything has resistance. Even the wires have resistance, albeit very low resistance.</p>
+</section>
+
+<section>
+    <h2>Resistors</h2>
+    <p>We can add resistance on purpose with <em>resistors</em>. Resistors are can be used for limiting the amount of current when dealing with sensitive electrical components, such as LEDs.</p>
+    <small>Fun fact: resistors have colored bars on them which depend on the resistance.</small>
+</section>
+
+<section>
+    <h2>Conductance</h2>
+    <p>The reciprocal of resistance is called <em>conductance</em> and is measured in the unit of <em>siemens</em>. However, resistance is used more than conductance.</p>
+</section>
