--- a/physics/electrical-engineering/circuit-diagrams.html
+++ b/physics/electrical-engineering/circuit-diagrams.html
@@ -19,11 +19,11 @@ layout: electrical-engineering
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-resistor.png" alt="A resistor in a circuit diagram">
-        <figcaption>A resistor in a circuit diagram. Resistors are represented as squiggly lines with sharp corners.</figcaption>
+        <figcaption>A <a href="/physics/electrical-engineering/resistance/">resistor</a> in a circuit diagram. Resistors are represented as squiggly lines with sharp corners.</figcaption>
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-battery.png" alt="A resistor in a circuit diagram">
-        <figcaption>A battery in a circuit diagram. Batteries are represented as four lines with alternating lengths. The longest line on the end is the positive terminal, while the shortest line on the end is the negative terminal.</figcaption>
+        <figcaption>A <a href="/physics/electrical-engineering/batteries/">battery</a> in a circuit diagram. Batteries are represented as four lines with alternating lengths. The longest line on the end is the positive terminal, while the shortest line on the end is the negative terminal.</figcaption>
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-light-bulb.png" alt="A resistor in a circuit diagram">
@@ -31,10 +31,10 @@ layout: electrical-engineering
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-diode.png" alt="A resistor in a circuit diagram">
-        <figcaption>A diode in a circuit diagram. Diodes are represented as a triangle with a line.</figcaption>
+        <figcaption>A <a href="/physics/electrical-engineering/diodle/">diode</a> in a circuit diagram. Diodes are represented as a triangle with a line.</figcaption>
     </figure>
     <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-transistor.png" alt="A resistor in a circuit diagram">
-        <figcaption>A transistor in a circuit diagram</figcaption>
+        <figcaption>A <a href="/physics/electrical-engineering/transistors/">transistor</a> in a circuit diagram</figcaption>
     </figure>
 </section>
