--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -21,6 +21,10 @@ layout: default
                     <li><a href="/programming/python/fastapi/">FastAPI</a></li>
                     <li><a href="/programming/python/discord-py/">Discord.py</a></li>
                     <li><a href="/programming/python/sockets/">Sockets</a></li>
+                    <li><a href="/programming/python/pip/">PIP</a>
+                    <ul>
+                        <li><a href="/programming/python/pip/virtual-environments">Virtual Environments</a></li>
+                    </ul></li>
                 </ul>
             </li>
             <li><a href="/programming/golang/">Go</a></li>
