--- a/programming/python/data-structures-and-algorithms/dynamic-programming.html
+++ b/programming/python/data-structures-and-algorithms/dynamic-programming.html
@@ -5,4 +5,14 @@ permalink: /programming/python/data-structures-and-algorithms/dynamic-programmin
 ---
 
 <h1>Dynamic Programming</h1>
-<p></p>
+<p>In this tutorial, we'll learn about Dynamic Programming.</p>
+
+<section>
+    <h2>What is Dynamic Programming?</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>Different Aspects of Dynamic Programming</h2>
+    <p></p>
+</section>
