--- a/programming/python/data-structures-and-algorithms/index.html
+++ b/programming/python/data-structures-and-algorithms/index.html
@@ -19,5 +19,5 @@ permalink: /programming/python/data-structures-and-algorithms/
 
 <section>
     <h2>Why Learn About Data Structures And Algorithms?</h2>
-    <p></p>
+    <p>Data Structures and Algorithms are very important to learn about because they are always in Job Interviews are Programming competitions. They also make your code more efficient by allowing you to use different methods and functions on them.</p>
 </section>
