--- a/programming/python/data-structures-and-algorithms/dynamic-programming.html
+++ b/programming/python/data-structures-and-algorithms/dynamic-programming.html
@@ -9,7 +9,7 @@ permalink: /programming/python/data-structures-and-algorithms/dynamic-programmin
 
 <section>
     <h2>What is Dynamic Programming?</h2>
-    <p>Dynamic Programming is a method of Programming which involves <a href="/programming/python/data-structures-and-algorithms/recursion/">Recursion</a> and <a href="/programming/python/data-structures-and-algorithms/caching/">Caching</a>. It is useful when loops are involved and where you have to calculate a lot of code and expressions. Dynamic Programming accomplishes this quickly by recursively breaking the expression down and calculating each small part.</p>
+    <p>Dynamic Programming is a method of Programming which involves <a href="/programming/python/data-structures-and-algorithms/recursion/">Recursion</a> and <a href="/programming/python/data-structures-and-algorithms/caching/">Caching</a>. It is useful when loops are involved and where you have to calculate a lot of code and expressions. Dynamic Programming accomplishes this quickly by recursively breaking the expression down and calculating each small part. Lots of different interview and competitions involve Dynamic Programming.</p>
 </section>
 
 <section>
