--- a/physics/electrical-engineering/inductors.html
+++ b/physics/electrical-engineering/inductors.html
@@ -13,6 +13,7 @@ layout: electrical-engineering
 <section>
     <h2>How do Inductors Work?</h2>
     <p>Inductors are actually quite simple and only consist of a coil of wire. This generates a magnetic field when we pass electricity through it. Because of Lenz's law, the magnetic field opposes the electricity. (If it didn't there would be infinite energy!) So, when we increase the current, the inductor resists that and when we decrease current, the inductor resists that.</p>
+    <p>Inductors are often used for smoothing out electricity.</p>
 </section>
 
 <section>
