--- a/programming/python/data-structures-and-algorithms/dynamic-programming.html
+++ b/programming/python/data-structures-and-algorithms/dynamic-programming.html
@@ -14,5 +14,12 @@ permalink: /programming/python/data-structures-and-algorithms/dynamic-programmin
 
 <section>
     <h2>Different Aspects of Dynamic Programming</h2>
-    <p></p>
+    <p>Dynamic Programming is actually a huge part of Data Structures and Algorithms. Here are some concepts you need to know (we'll go over them):</p>
+    <ul>
+        <li><a href="/programming/python/data-structures-and-algorithms/recursion/">Recursion</a></li>
+        <li><a href="/programming/python/data-structures-and-algorithms/caching/">Caching</a>
+        <ul>
+            <li><a href="/programming/python/data-structures-and-algorithms/memoization/">Memoization</a></li>
+        </ul></li>
+    </ul>
 </section>
