--- a/physics/electrical-engineering/capacitors.html
+++ b/physics/electrical-engineering/capacitors.html
@@ -8,6 +8,7 @@ layout: electrical-engineering
 <section>
     <h2>What are Capacitors?</h2>
     <p>Capacitors store electricity, just like batteries. The difference is that capacitors charge and release electricity much faster. This is because capacitors store electricity using electric fields, while batteries use chemistry.</p>
+    <p>Capacitors have a wide variety of applications in many different fields.</p>
 </section>
 
 <section>
