--- a/programming/python/data-structures-and-algorithms/dynamic-programming.html
+++ b/programming/python/data-structures-and-algorithms/dynamic-programming.html
@@ -14,7 +14,7 @@ permalink: /programming/python/data-structures-and-algorithms/dynamic-programmin
 
 <section>
     <h2>Different Aspects of Dynamic Programming</h2>
-    <p>Dynamic Programming is actually a huge part of Data Structures and Algorithms. Here are some concepts you need to know (we'll go over them):</p>
+    <p>Dynamic Programming is actually a huge section of Data Structures and Algorithms. Here are some concepts you need to know (we'll go over them):</p>
     <ul>
         <li><a href="/programming/python/data-structures-and-algorithms/recursion/">Recursion</a></li>
         <li><a href="/programming/python/data-structures-and-algorithms/caching/">Caching</a>
