how capacitors work section

--- a/physics/electrical-engineering/capacitors.html
+++ b/physics/electrical-engineering/capacitors.html
@@ -18,5 +18,5 @@ layout: electrical-engineering
 
 <section>
     <h2>How Capacitors Work</h2>
-    <p></p>
+    <p>Capacitors consist of two metal plates stuck very close together with an insulator between them.</p>
 </section>
