Add symbols for units

--- a/physics/electrical-engineering/capacitors.html
+++ b/physics/electrical-engineering/capacitors.html
@@ -8,15 +8,14 @@ layout: electrical-engineering
 <section>
     <h2>What are Capacitors?</h2>
     <p>Capacitors store electricity, just like batteries. The difference is that capacitors charge and release electricity much faster. This is because capacitors store electricity using electric fields, while batteries use chemistry.</p>
-    <p>Capacitors have a wide variety of applications in many different fields.</p>
 </section>
 
 <section>
     <h2>Capacitance</h2>
-    <p>The effect of a capacitor is called <em>capacitance</em>. We measure capacitance in <em>farads</em>.</p>
+    <p>The effect of a capacitor is called <em>capacitance</em>. We measure capacitance in <em>farads</em> (symbol: F).</p>
 </section>
 
 <section>
     <h2>How Capacitors Work</h2>
-    <p>Capacitors consist of two metal plates stuck very close together with an insulator between them.</p>
+    <p></p>
 </section>
