--- a/physics/electrical-engineering/resistance.html
+++ b/physics/electrical-engineering/resistance.html
@@ -19,5 +19,5 @@ layout: electrical-engineering
 
 <section>
     <h2>Conductance</h2>
-    <p>The reciprocal of resistance is called <em>conductance</em> and is measured in the unit of <em>siemens</em>. However, resistance is used more than conductance.</p>
+    <p>The reciprocal of resistance is called <em>conductance</em> and is measured in the unit of <em>siemens</em> (symbol: S). However, resistance is used more than conductance.</p>
 </section>
