--- a/physics/electrical-engineering/current.html
+++ b/physics/electrical-engineering/current.html
@@ -7,4 +7,4 @@ layout: electrical-engineering
 
 <p>In electrical engineering, <em>current</em> is the rate of electricity (usually electrons) that is flowing past a point in a circuit.</p>
 <p>If you think of the electricity as water flow, current is how much water is flowing through a point in the pipe every second.</p>
-<p>The SI unit for measuring current is the <em>ampere</em> (also called an <em>amp</em>). An ampere is defined as one coulomb per second. We measure current using an <em>ammeter</em>.</p>
+<p>The SI unit for measuring current is the <em>ampere</em> (symbol: A). An ampere is defined as one coulomb per second. We measure current using an <em>ammeter</em>.</p>
