Add volt and ohm unit info

--- a/physics/electrical-engineering/resistance.html
+++ b/physics/electrical-engineering/resistance.html
@@ -9,6 +9,7 @@ layout: electrical-engineering
     <h2>What is Resistance?</h2>
     <p><em>Resistance</em> is a measure of how much something blocks electricity. You can think of resistance as friction for electricity.</p>
     <p>Since we don't live in a perfect world, everything has resistance. Even the wires have resistance, albeit very low resistance.</p>
+    <p>The unit for measuring resistance is the <em>ohm</em> (symbol: Ω)</p>
 </section>
 
 <section>
