--- a/physics/electrical-engineering/voltage.html
+++ b/physics/electrical-engineering/voltage.html
@@ -6,4 +6,4 @@ layout: electrical-engineering
 <h1>Voltage</h1>
 
 <p><em>Voltage</em> is the amount of pressure between two points in a circuit. This pressure is applied by the power source in order to push the electrons around the circuit.</p>
-<p>The unit for measuring <em>voltage</em> is the volt. We use <em>voltmeter</em> to measure voltage between two points in a circuit.</p>
+<p>The unit for measuring <em>voltage</em> is the <em>volt</em> (symbol: V). We use <em>voltmeter</em> to measure voltage between two points in a circuit.</p>
