--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -13,6 +13,7 @@ permalink: /programming/python/data-structures-and-algorithms/queues/
     <p>Queues are a simple but useful Data Structure. They're used in Programming Competitions and Job Interviews, so it is a good idea to learn about them.</p>
     <p>In Programming, Queues are similar to line-ups of people in real life. For example, let's say that some people are lining up to go on a rollar coaster:</p>
     <div class="Row">
+        <div class="Column">Rollar<br>Coaster</div>
         <div class="Column">4</div>
         <div class="Column">67</div>
         <div class="Column">-32</div>
