--- a/physics/electrical-engineering/inductors.html
+++ b/physics/electrical-engineering/inductors.html
@@ -19,3 +19,8 @@ layout: electrical-engineering
     <h2>Inductance</h2>
     <p>We measure inductors using <em>inductance</em>, which is measured in the unit of <em>henry</em> (symbol: H).</p>
 </section>
+
+<section>
+    <h2>Uses</h2>
+    <p>Inductors are used for smoothing out electricity and storing electricity in power converters.</p>
+</section>
