--- a/physics/electrical-engineering/capacitors.html
+++ b/physics/electrical-engineering/capacitors.html
@@ -11,11 +11,16 @@ layout: electrical-engineering
 </section>
 
 <section>
+    <h2>Uses</h2>
+    <p>Capacitors have a wide variety of applications in many different fields.</p>
+</section>
+
+<section>
     <h2>Capacitance</h2>
     <p>The effect of a capacitor is called <em>capacitance</em>. We measure capacitance in <em>farads</em> (symbol: F).</p>
 </section>
 
 <section>
     <h2>How Capacitors Work</h2>
-    <p></p>
+    <p>Capacitors consist of two metal plates stuck very close together with an insulator between them.</p>
 </section>
