how capacitors work section

--- a/physics/electrical-engineering/capacitors.html
+++ b/physics/electrical-engineering/capacitors.html
@@ -22,5 +22,5 @@ layout: electrical-engineering
 
 <section>
     <h2>How Capacitors Work</h2>
-    <p>Capacitors consist of two metal plates stuck very close together with an insulator between them.</p>
+    <p>Capacitors consists of two metal plates, called the electrodes, with an insulator in the middle called the dielectric. Because the electrons cannot cross the dielectric, there is a buildup of charge, which can be harnessed for electricity.</p>
 </section>
