--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -32,7 +32,7 @@ from queue import Queue
 my_queue = Queue()
 print(my_queue.empty())
     </code></pre>
-    <p>In this example, we create an empty Queue using the <code>Queue</code> class. We first import it from the <code>queue</code> class and then we assign an empty Queue to the variable <var>q</var>.</p>
+    <p>In this example, we create an empty Queue using the <code>Queue</code> class. We first import it from the <code>queue</code> module and then we assign an empty Queue to the variable <var>q</var>.</p>
     <p>Then, type the following code into your program:</p>
     <pre><code class="language-python">
 history.append(4)
