capacitor circuit diagram

--- a/physics/electrical-engineering/circuit-diagrams.html
+++ b/physics/electrical-engineering/circuit-diagrams.html
@@ -30,6 +30,10 @@ layout: electrical-engineering
         <figcaption>A light bulb in a circuit diagram. Light bulbs are represented as circles with perpendicular lines inside.</figcaption>
     </figure>
     <figure>
+        <img src="/images/physics/electrical-engineering/circuit-diagram-capacitor.webp" alt="A capacitor in a circuit diagram">
+        <figcaption>A <a href="/physics/electrical-engineering/capacitors/">capacitor</a> in a circuit diagram</figcaption>
+    </figure>
+    <figure>
         <img src="/images/physics/electrical-engineering/circuit-diagram-diode.png" alt="A diode in a circuit diagram">
         <figcaption>A <a href="/physics/electrical-engineering/diodes/">diode</a> in a circuit diagram. Diodes are represented as a triangle with a line.</figcaption>
     </figure>
