ids, for better links

--- a/programming/python/data-types.html
+++ b/programming/python/data-types.html
@@ -12,30 +12,30 @@ permalink: /programming/python/data-types/
 </section>
 
 <section>
-    <h2>Strings</h2>
+    <h2 id="strings">Strings</h2>
     <p>One of the most important data types in all of Python is the string. Put simply, strings are just some text. When we learned to make our very first Python program, we learned that we must wrap text in double or single quotes. Strings are simply the text we wrapped in quotes.</p>
     <p>If you have trouble remembering this, think of strings as strings of characters.</p>
 </section>
 
 <section>
-    <h2>Integers</h2>
+    <h2 id="integers">Integers</h2>
     <p>Integers are simply whole numbers, which can be positive or negative. They <strong>cannot</strong> be decimals. Simple as that. We do not need to wrap them in quotes and we can do arithmetic with them.</p>
 </section>
 
 <section>
-    <h2>Floats</h2>
+    <h2 id="floats">Floats</h2>
     <p>Floats are basically the same as integers and we can do the same things with them. The only difference is that floats are decimals. Floats are an abbreviation of floating point numbers.</p>
 </section>
 
 <section>
-    <h2>Booleans</h2>
+    <h2 id="booleans">Booleans</h2>
     <p>Although the name might sound exotic, booleans are actually incredibly simple. They are just true or false. Computers are made with trues and falses (also known as ones and zeros) so you'd imagine that booleans are a very important data type.</p>
     <p>To make a boolean have the value of true, we simply type the word "true" but capitalized. So, <code>True</code>. For false, we type <code>False</code>.</p>
     <p>Booleans are named after the English mathematician George Boole.</p>
 </section>
 
 <section>
-    <h2>None</h2>
+    <h2 id="none">None</h2>
     <p><code>None</code> is basically just a placeholder when there is nothing. <code>None</code> is actually its own data type, <code>NoneType</code>. It may seem awkward since None is sort of like a boolean, but <code>None</code> is actually a different data type.</p>
 </section>
 
