--- a/programming/python/data-structures-and-algorithms/queues.html
+++ b/programming/python/data-structures-and-algorithms/queues.html
@@ -32,7 +32,7 @@ from queue import Queue
 my_queue = Queue()
 print(my_queue.empty())
     </code></pre>
-    <p>In this example, we create an empty Queue using the <code>Queue</code> class. We first import it from the <code>queue</code> module and then we assign an empty Queue to the variable <var>q</var>. After we do this, we call the <code>empty</code> method on <var>q</var> and we print out the result. The <code>empty</code> function returns a </p>
+    <p>In this example, we create an empty Queue using the <code>Queue</code> class. We first import it from the <code>queue</code> module and then we assign an empty Queue to the variable <var>q</var>. After we do this, we call the <code>empty</code> method on <var>q</var> and we print out the result. The <code>empty</code> function returns a <a href="/programming/python/data-types#booleans">Boolean</a> which indicates whether or not the Queue is empty. Since we haven't actually added anything to the Queue yet, it is still empty so our program will print out <samp>True</samp>.</p>
     <p>Then, type the following code into your program:</p>
     <pre><code class="language-python">
 history.append(4)
