diode use sectino

--- a/physics/electrical-engineering/diodes.html
+++ b/physics/electrical-engineering/diodes.html
@@ -11,6 +11,11 @@ layout: electrical-engineering
 </section>
 
 <section>
+    <h2>Uses</h2>
+    <p>One interesting use of diodes is as a light. LEDs are in fact a specialized type of diode.</p>
+</section>
+
+<section>
     <h2>How do Diodes Work?</h2>
     <p></p>
 </section>
